compiler/testData/diagnostics/tests/sealed/NeverOpen.kt
<!OPEN_MODIFIER_IN_SEALED!>open<!> sealed class Base {

}